--- a/main/templates/main/menu/tpl.html
+++ b/main/templates/main/menu/tpl.html
@@ -1,5 +1,5 @@
 <ul{% for key, value in data.iteritems %} {{ key }} = "{{ value }}"{% endfor %}>
-{%for node in menu.children.all %}
+{%for node in menu.children.published.all %}
     {%include "main/menu/tpl_inner.html" %}
 {%endfor%}
 </ul>
