--- a/main/templates/main/menu/tpl_inner.html
+++ b/main/templates/main/menu/tpl_inner.html
@@ -1,7 +1,7 @@
 <li> {{node.title}}
     {%if node.has_childs %}
         <ul>
-         {%for ch in node.children.all %}
+         {%for ch in node.children.published.all %}
               {%with node=ch template_name="main/menu/tpl_inner.html" %}
                    {%include template_name%}
               {%endwith%}
