--- a/midnight/templates/demo/base.html
+++ b/midnight/templates/demo/base.html
@@ -1,6 +1,7 @@
 {% load admin_static %}
 {% load staticfiles %}
 {% load menu %}
+{% load include_area %}
 <html>
 	<head>
 	
@@ -16,6 +17,9 @@
 		<div class="row">
 
 			<div class="col-xs-4">
+
+                {% show_area "left" %}
+
 			</div>
 	
 			<div class="col-xs-8">
