--- a/midnight/templates/demo/base.html
+++ b/midnight/templates/demo/base.html
@@ -1,6 +1,7 @@
 {% load admin_static %}
 {% load staticfiles %}
 {% load menu %}
+{% load gallery %}
 {% load include_area %}
 <html>
 	<head>
@@ -28,6 +29,8 @@
 
 				{% block content %}
 				{% endblock %}
+
+                {% show_gallery "test" "150x110" %}
 			</div>
 
 		</div>
