--- a/midnight/templates/demo/base.html
+++ b/midnight/templates/demo/base.html
@@ -3,12 +3,15 @@
 {% load menu %}
 {% load gallery %}
 {% load include_area %}
+{% load assets %}
 <html>
 	<head>
 	
 	<link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet"/>
 	<link href="{% static "styles.css" %}" rel="stylesheet"/>
-
+    {% assets "css_all" %}
+        <link rel="stylesheet" href="{{ ASSET_URL }}" />
+    {% endassets %}
 	</head>
 
 <body>
@@ -36,6 +39,10 @@
 		</div>
 		
 	</div>
+
+{% assets "js_all" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+{% endassets %}
 
 </body>
 
