--- a/main/templates/main/gallery/tpl.html
+++ b/main/templates/main/gallery/tpl.html
@@ -1,8 +1,11 @@
 {% load thumbnail %}
 
 <h2>{{ album.title }}</h2>
+
+{{ album.text }}
+
 <ul{% for key, value in data.iteritems %} {{ key }} = "{{ value }}"{% endfor %}>
-{%for photo in album.photo_set.published.all %}
+{%for photo in photos %}
     <li>
         {% thumbnail photo.image size crop=crop as im %}
             <a class="photogallery" rel="{{ album.slug }}" href="{{ photo.image.url }}"><img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"></a>
