--- a/midnight/static/demo/styles.css
+++ b/midnight/static/demo/styles.css
@@ -1,5 +1,11 @@
 body {
 
-	background: #ccc;
+	background: #fff;
 
+}
+footer {
+	min-height: 50px;
+	padding: 20px 0;
+	margin-top: 20px;
+	border-top: 1px solid #e5e5e5;
 }
