доработка списка новостей, новый виджет для привязки новостей к категориям в админке

--- a/news/templates/news/news/index.html
+++ b/news/templates/news/news/index.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 
+{% load i18n %}
 {% load bootstrap_pagination %}
 
 {% block content %}
+
+    {% if section %}
+        <h1>{{ section.title }}</h1>
+    {% else  %}
+       <h1>{% trans "News" %}</h1>
+    {% endif %}
 
     {% for item in news %}
 
