--- a/midnight/templates/demo/base.html
+++ b/midnight/templates/demo/base.html
@@ -6,7 +6,11 @@
 {% load assets %}
 <html>
 	<head>
-	
+
+    <title>{{ meta.metatitle }}</title>
+    <meta name="keywords" content="{{ meta.keywords }}">
+    <meta name="description" content="{{ meta.description }}">
+
 	<link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet"/>
 	<link href="{% static "styles.css" %}" rel="stylesheet"/>
     {% assets "css_all" %}
