--- a/news/templates/news/news/index.html
+++ b/news/templates/news/news/index.html
@@ -13,7 +13,7 @@
 
     {% for item in news %}
 
-        <h2>{{ item.title }}</h2>
+        <h2><a href="{% url 'news:news_detail' slug=item.slug %}">{{ item.title }}</a></h2>
 
         <p>{{ item.annotation | safe }}</p>
 
