--- a/midnight/templates/demo/base.html
+++ b/midnight/templates/demo/base.html
@@ -41,7 +41,7 @@
 
                 <hr />
 
-                {% show_news_line slug='company'%}
+                {% show_news_line %}
 
 			</div>
 	
