--- a/midnight/static/demo/styles.css
+++ b/midnight/static/demo/styles.css
@@ -9,3 +9,18 @@ footer {
 	margin-top: 20px;
 	border-top: 1px solid #e5e5e5;
 }
+
+.feedback-form label {
+	display: block;
+}
+
+.errorlist {
+	margin: 0;
+	padding: 0;
+}
+
+.errorlist li {
+	list-style-type: none;
+	color: #ff0000;
+	padding: 0 0 5px;
+}
