--- a/main/templates/main/pages/feedback.html
+++ b/main/templates/main/pages/feedback.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% load bootstrap %}
 
 {% block content %}
 
@@ -24,7 +25,7 @@
 
     <form method="post" class="feedback-form">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|bootstrap }}
         <input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary" />
     </form>
 
