--- a/midnight/templates/demo/base.html
+++ b/midnight/templates/demo/base.html
@@ -1,9 +1,7 @@
 {% load admin_static %}
 {% load staticfiles %}
-{% load menu %}
-{% load gallery %}
-{% load include_area %}
-{% load news_line %}
+{% load main_tags %}
+{% load news_tags %}
 {% load assets %}
 <html>
 	<head>
