--- a/midnight/templates/demo/base.html
+++ b/midnight/templates/demo/base.html
@@ -3,6 +3,9 @@
 {% load main_tags %}
 {% load news_tags %}
 {% load assets %}
+{% load i18n %}
+
+
 <html>
 	<head>
 
@@ -11,7 +14,7 @@
     <meta name="description" content="{{ meta.description }}">
 
 	<link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet"/>
-	<link href="{% static "styles.css" %}" rel="stylesheet"/>
+	<link href="{% static "theme/css/styles.css" %}" rel="stylesheet"/>
     {% assets "css_all" %}
         <link rel="stylesheet" href="{{ ASSET_URL }}" />
     {% endassets %}
@@ -24,7 +27,10 @@
         <div class="jumbotron">
             <h1>MidnightCms</h1>
             <p>The amazing powered by Django framework</p>
-            <p><a class="btn btn-primary btn-lg" href="/admin/" role="button" target="_blank">Admin panel</a></p>
+            <p>
+                <a class="btn btn-primary btn-lg" href="/admin/" role="button" target="_blank">Admin panel</a>
+                <a class="feedback" class="btn btn-link" href="#feedback_form">{% trans "Feedback" %}</a>
+            </p>
         </div>
 
 		<div class="row">
@@ -50,6 +56,8 @@
 
                 {% show_gallery "test" "150x110" class='list-inline' %}
 
+                {% ajax_form 'main.forms.Feedback' 'main:page_feedback' tag_id='feedback_form' modal=True %}
+
 			</div>
 
 		</div>
@@ -63,6 +71,8 @@
 {% assets "js_all" %}
     <script type="text/javascript" src="{{ ASSET_URL }}"></script>
 {% endassets %}
+
+<script type="text/javascript" src="{% static 'theme/js/functions.js' %}"></script>
 
 </body>
 
