--- a/midnight/templates/common/registration/password_reset_confirm.html
+++ b/midnight/templates/common/registration/password_reset_confirm.html
@@ -1,5 +1,6 @@
 {% extends "registration/registration_base.html" %}
 {% load i18n %}
+{% load bootstrap %}
 
 {% block title %}{% trans "Confirm password reset" %}{% endblock %}
 
@@ -7,8 +8,8 @@
 <p>{% trans "Enter your new password below to reset your password:" %}</p>
 <form method="post" action="">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="{% trans 'Set password' %}" />
+    {{ form|bootstrap }}
+    <input type="submit" class="btn btn-primary" value="{% trans 'Set password' %}" />
 </form>
 {% endblock %}
 
