--- a/midnight/templates/demo/layouts/base.html
+++ b/midnight/templates/demo/layouts/base.html
@@ -37,6 +37,8 @@
 
 			<div class="col-xs-4">
 
+                {% user_info %}
+
                 {% show_menu "main" class='nav nav-pills nav-stacked' %}
 
                 <hr />
