--- a/midnight/templates/common/registration/activation_complete.html
+++ b/midnight/templates/common/registration/activation_complete.html
@@ -4,6 +4,7 @@
 {% block title %}{% trans "Account Activated" %}{% endblock %}
 
 {% block content %}
+<h1>{% trans "Account Activated" %}</h1>
 <p>
     {% trans "Your account is now activated." %}
     {% if not user.is_authenticated %}
