--- a/midnight/templates/common/registration/password_change_form.html
+++ b/midnight/templates/common/registration/password_change_form.html
@@ -1,13 +1,14 @@
 {% extends "registration/registration_base.html" %}
-{% load i18n %}
+{% load i18n bootstrap %}
 
 {% block title %}{% trans "Change password" %}{% endblock %}
 
 {% block content %}
+<h1>{% trans "Change password" %}</h1>
 <form method="post" action="">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="{% trans 'Change password' %}" />
+    {{ form|bootstrap }}
+    <input type="submit" class="btn btn-primary" value="{% trans 'Change password' %}" />
 </form>
 {% endblock %}
 
