--- a/midnight/templates/common/registration/password_reset_confirm.html
+++ b/midnight/templates/common/registration/password_reset_confirm.html
@@ -5,6 +5,7 @@
 {% block title %}{% trans "Confirm password reset" %}{% endblock %}
 
 {% block content %}
+<h1>{% trans "Confirm password reset" %}</h1>
 <p>{% trans "Enter your new password below to reset your password:" %}</p>
 <form method="post" action="">
     {% csrf_token %}
