--- a/midnight/templates/common/registration/registration_complete.html
+++ b/midnight/templates/common/registration/registration_complete.html
@@ -4,6 +4,7 @@
 {% block title %}{% trans "Activation email sent" %}{% endblock %}
 
 {% block content %}
+<h1>{% trans "Activation email sent" %}</h1>
 <p>{% trans "Please check your email to complete the registration process." %}</p>
 {% endblock %}
 
