--- a/midnight/templates/common/registration/password_change_done.html
+++ b/midnight/templates/common/registration/password_change_done.html
@@ -4,6 +4,7 @@
 {% block title %}{% trans "Password changed" %}{% endblock %}
 
 {% block content %}
+<h1>{% trans "Password changed" %}</h1>
 <p>{% trans "Password successfully changed!" %}</p>
 {% endblock %}
 
