--- a/midnight/templates/common/registration/password_reset_done.html
+++ b/midnight/templates/common/registration/password_reset_done.html
@@ -4,6 +4,7 @@
 {% block title %}{% trans "Password reset" %}{% endblock %}
 
 {% block content %}
+<h1>{% trans "Password reset" %}</h1>
 <p>
     {% blocktrans %}
     We have sent you an email with a link to reset your password.  Please check
