--- a/midnight/templates/common/registration/password_reset_form.html
+++ b/midnight/templates/common/registration/password_reset_form.html
@@ -5,6 +5,7 @@
 {% block title %}{% trans "Reset password" %}{% endblock %}
 
 {% block content %}
+<h1>{% trans "Reset password" %}</h1>
 <p>
     {% blocktrans %}
     Forgot your password?  Enter your email in the form below and we'll send you instructions for creating a new one.
