--- a/midnight/templates/common/registration/registration_closed.html
+++ b/midnight/templates/common/registration/registration_closed.html
@@ -4,5 +4,6 @@
 {% block title %}{% trans "Registration is closed" %}{% endblock %}
 
 {% block content %}
+<h1>{% trans "Registration is closed" %}</h1>
 <p>{% trans "Sorry, but registration is closed at this moment. Come back later." %}</p>
 {% endblock %}
