--- a/midnight/templates/demo/layouts/base.html
+++ b/midnight/templates/demo/layouts/base.html
@@ -9,9 +9,9 @@
 <html>
 	<head>
 
-    <title>{{ meta.metatitle }}</title>
-    <meta name="keywords" content="{{ meta.keywords }}">
-    <meta name="description" content="{{ meta.description }}">
+    <title>{% block title %}{% endblock %}</title>
+    <meta name="keywords" content="{% block keywords %}{% endblock %}">
+    <meta name="description" content="{% block description %}{% endblock %}">
 
 	<link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet"/>
 	<link href="{% static "theme/css/styles.css" %}" rel="stylesheet"/>
