--- a/main/templates/main/tags/show_gallery.html
+++ b/main/templates/main/tags/show_gallery.html
@@ -4,7 +4,7 @@
 
 {{ album.text }}
 
-<ul{% for key, value in data.iteritems %} {{ key }} = "{{ value }}"{% endfor %}>
+<ul{% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %}>
 {%for photo in photos %}
     <li>
         {% thumbnail photo.image size crop=crop as im %}
