--- a/main/templates/main/tags/show_menu.html
+++ b/main/templates/main/tags/show_menu.html
@@ -1,4 +1,4 @@
-<ul{% for key, value in data.iteritems %} {{ key }} = "{{ value }}"{% endfor %}>
+<ul{% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %}>
 {%for node in menu.children.published.all %}
     {%include "main/tags/show_menu_inner.html" %}
 {%endfor%}
