--- a/midnight/templates/demo/layouts/base.html
+++ b/midnight/templates/demo/layouts/base.html
@@ -53,6 +53,10 @@
 	
 			<div class="col-xs-8">
 
+                {% if crumbs %}
+                    {% breadcrumbs crumbs class='breadcrumb' %}
+                {% endif %}
+
 				{% block content %}
 				{% endblock %}
 
