доработки новостей  хлебных крошек. подключение debug тулбара

--- a/midnight/templates/demo/layouts/base.html
+++ b/midnight/templates/demo/layouts/base.html
@@ -47,7 +47,7 @@
 
                 <hr />
 
-                {% show_news_line %}
+                {% show_news_line slug='company' %}
 
 			</div>
 	
