--- a/main/templates/main/tags/comments.html
+++ b/main/templates/main/tags/comments.html
@@ -1,26 +1,36 @@
 {% load bootstrap i18n %}
 
-<div{% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %}>
+<noindex>
 
-    <div class="comments-list">
+    <div{% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %}>
 
-        {% include "main/tags/comments_list.html" %}
+        <div class="comments-list">
 
+            {% include "main/tags/comments_list.html" %}
+
+        </div>
+
+        <h3>{% trans "Leave comment" %}</h3>
+
+        <div class="alert alert-success" style="display: none">{% trans 'Comment success' %}</div>
+
+        <div class="alert alert-danger" style="display: none">{% trans 'Comment error' %}</div>
+
+        <form id="comments-form" action="{% url url %}" method="post">
+
+            <div class="answer-info" style="display: none">
+                {% trans "Answer for" %}: <span class="answer-name"></span>
+                [<a rel="nofollow" href="" class="cancel-answer">{% trans "cancel" %}</a>]
+            </div>
+
+            <div class="comments-form-body">
+
+                {% include "main/tags/comments_form_body.html" %}
+
+            </div>
+
+            <input type="submit" class="btn btn-primary" value="{% trans "Submit" %}" />
+        </form>
     </div>
 
-    <form id="comments-form" action="{% url url %}" method="post">
-
-        <div class="answer-info" style="display: none">
-            {% trans "Answer for" %}: <span class="answer-name"></span>
-            [<a rel="nofollow" href="" class="cancel-answer">{% trans "cancel" %}</a>]
-        </div>
-
-        <div class="comments-form-body">
-
-            {% include "main/tags/comments_form_body.html" %}
-
-        </div>
-
-        <input type="submit" class="btn btn-primary" value="{% trans "Submit" %}" />
-    </form>
-</div>
+</noindex>
