подключаем грапелли и медиа менеджер

--- a/midnight/templates/demo/layouts/base.html
+++ b/midnight/templates/demo/layouts/base.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="{% block keywords %}{% endblock %}">
     <meta name="description" content="{% block description %}{% endblock %}">
 
-	<link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet"/>
+	<link href="{% static "bootstrap/dist/css/bootstrap.min.css" %}" rel="stylesheet"/>
 	<link href="{% static "theme/css/styles.css" %}" rel="stylesheet"/>
     {% assets "css_main" %}
         <link rel="stylesheet" href="{{ ASSET_URL }}" />
