--- a/midnight/templates/demo/layouts/base.html
+++ b/midnight/templates/demo/layouts/base.html
@@ -62,7 +62,7 @@
 
                 {% show_gallery "test" "150x110" class='list-inline' %}
 
-                {% ajax_form 'main.forms.Feedback' 'main:page_feedback' tag_id='feedback_form' modal=True %}
+                {% ajax_form 'midnight_main.forms.Feedback' 'midnight_main:page_feedback' tag_id='feedback_form' modal=True %}
 
 			</div>
 
