--- a/midnight/templates/demo/layouts/base.html
+++ b/midnight/templates/demo/layouts/base.html
@@ -1,7 +1,7 @@
 {% load admin_static %}
 {% load staticfiles %}
-{% load main_tags %}
-{% load news_tags %}
+{% load midnight_main %}
+{% load midnight_news %}
 {% load assets %}
 {% load i18n %}
 
