--- a/midnight_main/templates/midnight_main/pages/pages.html
+++ b/midnight_main/templates/midnight_main/pages/pages.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% load main_tags %}
+{% load midnight_main %}
 
 {% block title %}{{ meta.metatitle }}{% endblock %}
 {% block keywords %}{{ meta.keywords }}{% endblock %}
