--- a/midnight_main/templates/midnight_main/pages/pages.html
+++ b/midnight_main/templates/midnight_main/pages/pages.html
@@ -13,7 +13,7 @@
 
     {% if page.comments %}
 
-        <h2>{% trans "comments" %}</h2>
+        <h2>{% trans "Comments" %}</h2>
 
         {% comments comments comments_form page "midnight_main:page_comments" %}
 
