--- a/midnight/static/demo/theme/css/styles.css
+++ b/midnight/static/demo/theme/css/styles.css
@@ -24,3 +24,14 @@ footer {
 	color: #ff0000;
 	padding: 0 0 5px;
 }
+
+.list-inline {
+	margin: 0;
+	padding: 0;
+}
+
+.list-inline li {
+	list-style-type: none;
+	padding: 0;
+	margin: 0 10px 10px 0;
+}
