--- a/midnight_catalog/templates/midnight_catalog/catalog/index.html
+++ b/midnight_catalog/templates/midnight_catalog/catalog/index.html
@@ -35,7 +35,7 @@
 
             <p>{{ item.price }}</p>
 
-            <p>{% param_value item.paramvalue_set.all "producer" %}</p>
+            {% comment %}<p>{% param_title item.paramvalue_set.all "producer" %}: {% param_value item.paramvalue_set.all "producer" %}</p>{% endcomment %}
 
         </div>
 
