фильтр для валют

--- a/midnight_catalog/templates/midnight_catalog/catalog/detail.html
+++ b/midnight_catalog/templates/midnight_catalog/catalog/detail.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% load thumbnail i18n %}
+{% load thumbnail i18n midnight_catalog %}
 
 {% block title %}{{ meta.metatitle }}{% endblock %}
 {% block keywords %}{{ meta.keywords }}{% endblock %}
@@ -28,7 +28,7 @@
 
             <ul class="list-group pull-left">
 
-                <li class="list-group-item"><strong>{% trans "Price" %}:</strong> <span class="label label-danger">{{ item.price }}</span></li>
+                <li class="list-group-item"><strong>{% trans "Price" %}:</strong> <span class="label label-danger">{{ item.price | currency }}</span></li>
 
                 {% for param_value in item.paramvalue_set.all %}
                     <li class="list-group-item"><strong>{{ param_value.param.title }}:</strong> {{ param_value.value }} <em>{{ param_value.param.measurement }}</em></li>
