доработки списка категорий каталога

--- a/midnight_catalog/templates/midnight_catalog/tags/catalog_sections.html
+++ b/midnight_catalog/templates/midnight_catalog/tags/catalog_sections.html
@@ -2,7 +2,7 @@
 
 <ul{% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %}>
     {% recursetree sections %}
-        <li>
+        <li {% if node.is_current %}class="active"{% endif %}>
             <a href="{% url "midnight_catalog:catalog_list" slug=node.slug %}">{{ node.title }}</a>
 
             {% if not node.is_leaf_node %}
