--- a/midnight_main/templates/midnight_main/tags/show_menu.html
+++ b/midnight_main/templates/midnight_main/tags/show_menu.html
@@ -7,7 +7,7 @@
 
             <a href="{{ node.link }}" target="{{ node.target }}" class="{{ node.class }}">{{node.title}}</a>
 
-            {% if not node.is_leaf_node %}
+            {% if not node.is_leaf_node and node.level < max_level %}
                 <ul class="children">
                     {{ children }}
                 </ul>
