подсчет количества товаров в списке категорий каталога

--- a/midnight_catalog/templates/midnight_catalog/tags/catalog_sections.html
+++ b/midnight_catalog/templates/midnight_catalog/tags/catalog_sections.html
@@ -3,7 +3,7 @@
 <ul{% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %}>
     {% recursetree sections %}
         <li {% if node.is_current %}class="active"{% endif %}>
-            <a href="{% url "midnight_catalog:catalog_list" slug=node.slug %}">{{ node.title }}</a>
+            <a href="{% url "midnight_catalog:catalog_list" slug=node.slug %}">{{ node.title }} ({{ node.product__count }})</a>
 
             {% if not node.is_leaf_node and node.level < max_level %}
                 <ul class="children">
