--- a/midnight_catalog/templates/midnight_catalog/catalog/detail.html
+++ b/midnight_catalog/templates/midnight_catalog/catalog/detail.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% load thumbnail i18n midnight_catalog %}
+{% load thumbnail i18n midnight_catalog midnight_main %}
 
 {% block title %}{{ meta.metatitle }}{% endblock %}
 {% block keywords %}{{ meta.keywords }}{% endblock %}
@@ -54,6 +54,14 @@
         </ul>
 
         {{ text | safe }}
+
+        {% if item.comments %}
+
+            <h2>{% trans "Comments" %}</h2>
+
+            {% comments comments comments_form item "midnight_catalog:product_comments" %}
+
+        {% endif %}
 
     </div>
 
