--- a/midnight_catalog/templates/midnight_catalog/tags/catalog_sections.html
+++ b/midnight_catalog/templates/midnight_catalog/tags/catalog_sections.html
@@ -2,15 +2,19 @@
 
 <ul{% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %}>
     {% recursetree sections %}
-        <li {% if node.is_current %}class="active"{% endif %}>
-            <a href="{% url "midnight_catalog:catalog_list" slug=node.slug %}">{{ node.title }} ({{ node.product__count }})</a>
 
-            {% if not node.is_leaf_node and node.level < max_level %}
-                <ul class="children">
-                    {{ children }}
-                </ul>
-            {% endif %}
+        {% if node.is_published %}
+            <li {% if node.is_current %}class="active"{% endif %}>
+                <a href="{% url "midnight_catalog:catalog_list" slug=node.slug %}">{{ node.title }} ({{ node.product__count }})</a>
 
-        </li>
+                {% if not node.is_leaf_node and node.level < max_level %}
+                    <ul class="children">
+                        {{ children }}
+                    </ul>
+                {% endif %}
+
+            </li>
+        {% endif %}
+
     {% endrecursetree %}
 </ul>
