--- a/midnight_main/templates/midnight_main/tags/search.html
+++ b/midnight_main/templates/midnight_main/tags/search.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<form action="{% url "haystack_search" %}" method="get">
+<form action="{% url "haystack_search" %}" method="get" {% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %} >
 
     <div class="form-group">
         <div class="input-group">
