--- a/midnight_main/templates/midnight_main/tags/user_info.html
+++ b/midnight_main/templates/midnight_main/tags/user_info.html
@@ -1,19 +1,17 @@
 {% load i18n %}
 
-<div class="panel panel-default">
-    <div class="panel-body">
+<div {% for key, value in data.items %} {{ key }} = "{{ value }}"{% endfor %} >
 
-        {% if user.is_authenticated %}
+{% if user.is_authenticated %}
 
-                <a href="{% url 'midnight_main:user_profile' %}">{% trans "Profile" %}</a> |
-                <a href="{% url 'auth_logout' %}">{% trans "Log out" %} ({{ user.username }})</a>
+        <a href="{% url 'midnight_main:user_profile' %}">{% trans "Profile" %}</a> |
+        <a href="{% url 'auth_logout' %}">{% trans "Log out" %} ({{ user.username }})</a>
 
-        {% else %}
+{% else %}
 
-                <a href="{% url 'auth_login' %}">{% trans "Log in" %}</a> |
-                <a href="{% url 'registration_register' %}">{% trans "Register for an account" %}</a>
+        <a href="{% url 'auth_login' %}">{% trans "Log in" %}</a> |
+        <a href="{% url 'registration_register' %}">{% trans "Register for an account" %}</a>
 
-        {% endif %}
+{% endif %}
 
-    </div>
 </div>
